Lab Verison/xsm_expl/Stages/7/Frontend/y.output
   0  $accept : start $end

   1  start : TypeDefBlock ClassDefBlock GDeclBlock FDefBlock MainBlock
   2        | TypeDefBlock ClassDefBlock GDeclBlock MainBlock
   3        | TypeDefBlock GDeclBlock MainBlock
   4        | TypeDefBlock GDeclBlock FDefBlock MainBlock
   5        | TypeDefBlock GDeclBlock

   6  TypeDefBlock : TYPE TypeDefList ENDTYPE
   7               |

   8  TypeDefList : TypeDefList TypeDef
   9              | TypeDef

  10  TypeDef : TypeID '{' FieldDeclList '}'

  11  TypeID : ID

  12  FieldDeclList : FieldDeclList FieldDecl
  13                | FieldDecl

  14  FieldDecl : TypeName ID ';'

  15  TypeName : INT
  16           | STR
  17           | ID

  18  ClassDefBlock : CLASS ClassDefList ENDCLASS

  19  ClassDefList : ClassDefList ClassDef
  20               | ClassDef

  21  ClassDef : ClassName '{' ClassMembers MethodDefns '}'

  22  ClassMembers : DECL FieldDeclList MethodDeclList ENDDECL

  23  ClassName : ID

  24  MethodDeclList : MethodDeclList MethodDecl
  25                 | MethodDecl

  26  MethodDecl : TypeName ID '(' ParamList ')' ';'

  27  MethodDefns : FDefBlock

  28  Slist : Slist Stmt ';'
  29        | Stmt ';'

  30  Stmt : inputStmt
  31       | outputStmt
  32       | assignStmt
  33       | ifStmt
  34       | whileStmt
  35       | doWhileStmt
  36       | breakStmt
  37       | continueStmt
  38       | breakPointStmt
  39       | DynamicMemStmt

  40  inputStmt : READ expr

  41  outputStmt : WRITE expr

  42  assignStmt : ID '=' expr
  43             | ID '[' expr ']' '=' expr
  44             | MUL ID '=' expr
  45             | Field '=' expr

  46  retVal : expr

  47  retStmt : RETURN retVal ';'

  48  ifStmt : IF expr THEN Slist ELSE Slist ENDIF
  49         | IF expr THEN Slist ENDIF

  50  whileStmt : WHILE expr DO Slist ENDWHILE

  51  doWhileStmt : DO Slist WHILE expr ENDWHILE

  52  breakStmt : BREAK

  53  continueStmt : CONTINUE

  54  breakPointStmt : BREAKPOINT

  55  GDeclBlock : DECL GDeclList ENDDECL
  56             | DECL ENDDECL

  57  GDeclList : GDeclList GDecl
  58            | GDecl

  59  GDecl : GType GIDList ';'
  60        | GType TupleDecl GIDList ';'

  61  GType : INT
  62        | STR
  63        | ID
  64        | TUPLE ID

  65  GIDList : GIDList ',' GID
  66          | GID

  67  GID : ID
  68      | ID '[' NUM ']'
  69      | ID '(' ParamList ')'
  70      | GPtrID
  71      | GPtrID '(' ParamList ')'

  72  GPtrID : MUL ID

  73  TupleDecl : '(' TupleFieldDeclList ')'

  74  TupleFieldDeclList : TupleFieldDeclList ',' TupleFieldDecl
  75                     | TupleFieldDecl

  76  TupleFieldDecl : TupleFieldType TupleFieldName

  77  TupleFieldType : INT
  78                 | STR

  79  TupleFieldName : ID

  80  ParamList : ParamList ',' Param
  81            | Param
  82            |

  83  Param : ParamType ID

  84  ParamType : INT
  85            | STR
  86            | INT MUL
  87            | STR MUL
  88            | ID

  89  ArgList : ArgList ',' Arg
  90          | Arg
  91          |

  92  Arg : expr

  93  FDefBlock : FDefBlock FDef
  94            | FDef

  95  FID : ID

  96  FDef : FuncSign '{' LDeclBlock FBody '}'

  97  FuncSign : FuncType FID '(' ParamList ')'

  98  FuncType : INT
  99           | STR
 100           | INT MUL
 101           | STR MUL
 102           | ID

 103  FBody : BEGIN_ Slist retStmt END ';'
 104        | BEGIN_ retStmt END ';'

 105  LDeclBlock : DECL LDeclList ENDDECL
 106             | DECL ENDDECL
 107             |

 108  LDeclList : LDeclList LDecl
 109            | LDecl

 110  LDecl : LType LIDList ';'
 111        | LType TupleDecl LIDList ';'

 112  LType : INT
 113        | STR
 114        | ID
 115        | TUPLE ID

 116  LIDList : LIDList ',' LID
 117          | LID

 118  LID : ID
 119      | ID '[' NUM ']'
 120      | MUL ID

 121  MainBlock : MainFunc '(' ')' '{' LDeclBlock MBody '}'

 122  MainFunc : INT MAIN

 123  MBody : BEGIN_ Slist retStmt END ';'

 124  DynamicMemStmt : AllocStmt
 125                 | FreeStmt
 126                 | InitializeStmt
 127                 | NewStmt

 128  AllocStmt : DynaMemID ALLOC '(' ')'

 129  FreeStmt : DynaMemID FREE '(' expr ')'

 130  InitializeStmt : DynaMemID INITIALIZE '(' ')'

 131  NewStmt : DynaMemID NEW '(' expr ')'

 132  DynaMemID : ID '='
 133            | ID '[' expr ']' '='

 134  FieldFunction : Field '(' ArgList ')'

 135  Field : Field '.' ID
 136        | FieldID '.' ID
 137        | SELF '.' ID

 138  FieldID : ID
 139          | ID '[' expr ']'

 140  expr : expr PLUS expr
 141       | expr MINUS expr
 142       | expr MUL expr
 143       | expr DIV expr
 144       | expr MOD expr
 145       | expr EQ expr
 146       | expr NEQ expr
 147       | expr LT expr
 148       | expr LTE expr
 149       | expr GT expr
 150       | expr GTE expr
 151       | expr AND expr
 152       | expr OR expr
 153       | NOT expr
 154       | '(' expr ')'
 155       | Field
 156       | FieldFunction
 157       | ID '(' ArgList ')'
 158       | ID '[' expr ']'
 159       | AMPERSAND ID
 160       | MUL ID
 161       | ID
 162       | NUM
 163       | STRING
 164       | NULL_

state 0
	$accept : . start $end  (0)
	TypeDefBlock : .  (7)

	TYPE  shift 1
	DECL  reduce 7
	CLASS  reduce 7

	start  goto 2
	TypeDefBlock  goto 3


state 1
	TypeDefBlock : TYPE . TypeDefList ENDTYPE  (6)

	ID  shift 4
	.  error

	TypeID  goto 5
	TypeDefList  goto 6
	TypeDef  goto 7


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : TypeDefBlock . ClassDefBlock GDeclBlock FDefBlock MainBlock  (1)
	start : TypeDefBlock . ClassDefBlock GDeclBlock MainBlock  (2)
	start : TypeDefBlock . GDeclBlock MainBlock  (3)
	start : TypeDefBlock . GDeclBlock FDefBlock MainBlock  (4)
	start : TypeDefBlock . GDeclBlock  (5)

	DECL  shift 8
	CLASS  shift 9
	.  error

	ClassDefBlock  goto 10
	GDeclBlock  goto 11


state 4
	TypeID : ID .  (11)

	.  reduce 11


state 5
	TypeDef : TypeID . '{' FieldDeclList '}'  (10)

	'{'  shift 12
	.  error


state 6
	TypeDefBlock : TYPE TypeDefList . ENDTYPE  (6)
	TypeDefList : TypeDefList . TypeDef  (8)

	ID  shift 4
	ENDTYPE  shift 13
	.  error

	TypeID  goto 5
	TypeDef  goto 14


state 7
	TypeDefList : TypeDef .  (9)

	.  reduce 9


state 8
	GDeclBlock : DECL . GDeclList ENDDECL  (55)
	GDeclBlock : DECL . ENDDECL  (56)

	ID  shift 15
	TUPLE  shift 16
	ENDDECL  shift 17
	INT  shift 18
	STR  shift 19
	.  error

	GType  goto 20
	GDeclList  goto 21
	GDecl  goto 22


state 9
	ClassDefBlock : CLASS . ClassDefList ENDCLASS  (18)

	ID  shift 23
	.  error

	ClassDef  goto 24
	ClassName  goto 25
	ClassDefList  goto 26


state 10
	start : TypeDefBlock ClassDefBlock . GDeclBlock FDefBlock MainBlock  (1)
	start : TypeDefBlock ClassDefBlock . GDeclBlock MainBlock  (2)

	DECL  shift 8
	.  error

	GDeclBlock  goto 27


state 11
	start : TypeDefBlock GDeclBlock . MainBlock  (3)
	start : TypeDefBlock GDeclBlock . FDefBlock MainBlock  (4)
	start : TypeDefBlock GDeclBlock .  (5)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	$end  reduce 5

	FDefBlock  goto 31
	MainBlock  goto 32
	FDef  goto 33
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 12
	TypeDef : TypeID '{' . FieldDeclList '}'  (10)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 40
	FieldDecl  goto 41
	FieldDeclList  goto 42


state 13
	TypeDefBlock : TYPE TypeDefList ENDTYPE .  (6)

	.  reduce 6


state 14
	TypeDefList : TypeDefList TypeDef .  (8)

	.  reduce 8


state 15
	GType : ID .  (63)

	.  reduce 63


state 16
	GType : TUPLE . ID  (64)

	ID  shift 43
	.  error


state 17
	GDeclBlock : DECL ENDDECL .  (56)

	.  reduce 56


state 18
	GType : INT .  (61)

	.  reduce 61


state 19
	GType : STR .  (62)

	.  reduce 62


state 20
	GDecl : GType . GIDList ';'  (59)
	GDecl : GType . TupleDecl GIDList ';'  (60)

	ID  shift 44
	MUL  shift 45
	'('  shift 46
	.  error

	GPtrID  goto 47
	TupleDecl  goto 48
	GIDList  goto 49
	GID  goto 50


state 21
	GDeclBlock : DECL GDeclList . ENDDECL  (55)
	GDeclList : GDeclList . GDecl  (57)

	ID  shift 15
	TUPLE  shift 16
	ENDDECL  shift 51
	INT  shift 18
	STR  shift 19
	.  error

	GType  goto 20
	GDecl  goto 52


state 22
	GDeclList : GDecl .  (58)

	.  reduce 58


state 23
	ClassName : ID .  (23)

	.  reduce 23


state 24
	ClassDefList : ClassDef .  (20)

	.  reduce 20


state 25
	ClassDef : ClassName . '{' ClassMembers MethodDefns '}'  (21)

	'{'  shift 53
	.  error


state 26
	ClassDefBlock : CLASS ClassDefList . ENDCLASS  (18)
	ClassDefList : ClassDefList . ClassDef  (19)

	ID  shift 23
	ENDCLASS  shift 54
	.  error

	ClassDef  goto 55
	ClassName  goto 25


state 27
	start : TypeDefBlock ClassDefBlock GDeclBlock . FDefBlock MainBlock  (1)
	start : TypeDefBlock ClassDefBlock GDeclBlock . MainBlock  (2)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	.  error

	FDefBlock  goto 56
	MainBlock  goto 57
	FDef  goto 33
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 28
	FuncType : ID .  (102)

	.  reduce 102


state 29
	FuncType : INT .  (98)
	FuncType : INT . MUL  (100)
	MainFunc : INT . MAIN  (122)

	MAIN  shift 58
	MUL  shift 59
	ID  reduce 98


state 30
	FuncType : STR .  (99)
	FuncType : STR . MUL  (101)

	MUL  shift 60
	ID  reduce 99


state 31
	start : TypeDefBlock GDeclBlock FDefBlock . MainBlock  (4)
	FDefBlock : FDefBlock . FDef  (93)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	.  error

	MainBlock  goto 61
	FDef  goto 62
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 32
	start : TypeDefBlock GDeclBlock MainBlock .  (3)

	.  reduce 3


state 33
	FDefBlock : FDef .  (94)

	.  reduce 94


state 34
	FDef : FuncSign . '{' LDeclBlock FBody '}'  (96)

	'{'  shift 63
	.  error


state 35
	FuncSign : FuncType . FID '(' ParamList ')'  (97)

	ID  shift 64
	.  error

	FID  goto 65


state 36
	MainBlock : MainFunc . '(' ')' '{' LDeclBlock MBody '}'  (121)

	'('  shift 66
	.  error


state 37
	TypeName : ID .  (17)

	.  reduce 17


state 38
	TypeName : INT .  (15)

	.  reduce 15


state 39
	TypeName : STR .  (16)

	.  reduce 16


state 40
	FieldDecl : TypeName . ID ';'  (14)

	ID  shift 67
	.  error


state 41
	FieldDeclList : FieldDecl .  (13)

	.  reduce 13


state 42
	TypeDef : TypeID '{' FieldDeclList . '}'  (10)
	FieldDeclList : FieldDeclList . FieldDecl  (12)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	'}'  shift 68
	.  error

	TypeName  goto 40
	FieldDecl  goto 69


state 43
	GType : TUPLE ID .  (64)

	.  reduce 64


state 44
	GID : ID .  (67)
	GID : ID . '[' NUM ']'  (68)
	GID : ID . '(' ParamList ')'  (69)

	'('  shift 70
	'['  shift 71
	','  reduce 67
	';'  reduce 67


state 45
	GPtrID : MUL . ID  (72)

	ID  shift 72
	.  error


state 46
	TupleDecl : '(' . TupleFieldDeclList ')'  (73)

	INT  shift 73
	STR  shift 74
	.  error

	TupleFieldType  goto 75
	TupleFieldDecl  goto 76
	TupleFieldDeclList  goto 77


state 47
	GID : GPtrID .  (70)
	GID : GPtrID . '(' ParamList ')'  (71)

	'('  shift 78
	','  reduce 70
	';'  reduce 70


state 48
	GDecl : GType TupleDecl . GIDList ';'  (60)

	ID  shift 44
	MUL  shift 45
	.  error

	GPtrID  goto 47
	GIDList  goto 79
	GID  goto 50


state 49
	GDecl : GType GIDList . ';'  (59)
	GIDList : GIDList . ',' GID  (65)

	','  shift 80
	';'  shift 81
	.  error


state 50
	GIDList : GID .  (66)

	.  reduce 66


state 51
	GDeclBlock : DECL GDeclList ENDDECL .  (55)

	.  reduce 55


state 52
	GDeclList : GDeclList GDecl .  (57)

	.  reduce 57


state 53
	ClassDef : ClassName '{' . ClassMembers MethodDefns '}'  (21)

	DECL  shift 82
	.  error

	ClassMembers  goto 83


state 54
	ClassDefBlock : CLASS ClassDefList ENDCLASS .  (18)

	.  reduce 18


state 55
	ClassDefList : ClassDefList ClassDef .  (19)

	.  reduce 19


state 56
	start : TypeDefBlock ClassDefBlock GDeclBlock FDefBlock . MainBlock  (1)
	FDefBlock : FDefBlock . FDef  (93)

	ID  shift 28
	INT  shift 29
	STR  shift 30
	.  error

	MainBlock  goto 84
	FDef  goto 62
	FuncSign  goto 34
	FuncType  goto 35
	MainFunc  goto 36


state 57
	start : TypeDefBlock ClassDefBlock GDeclBlock MainBlock .  (2)

	.  reduce 2


state 58
	MainFunc : INT MAIN .  (122)

	.  reduce 122


state 59
	FuncType : INT MUL .  (100)

	.  reduce 100


state 60
	FuncType : STR MUL .  (101)

	.  reduce 101


state 61
	start : TypeDefBlock GDeclBlock FDefBlock MainBlock .  (4)

	.  reduce 4


state 62
	FDefBlock : FDefBlock FDef .  (93)

	.  reduce 93


state 63
	FDef : FuncSign '{' . LDeclBlock FBody '}'  (96)
	LDeclBlock : .  (107)

	DECL  shift 85
	BEGIN_  reduce 107

	LDeclBlock  goto 86


state 64
	FID : ID .  (95)

	.  reduce 95


state 65
	FuncSign : FuncType FID . '(' ParamList ')'  (97)

	'('  shift 87
	.  error


state 66
	MainBlock : MainFunc '(' . ')' '{' LDeclBlock MBody '}'  (121)

	')'  shift 88
	.  error


state 67
	FieldDecl : TypeName ID . ';'  (14)

	';'  shift 89
	.  error


state 68
	TypeDef : TypeID '{' FieldDeclList '}' .  (10)

	.  reduce 10


state 69
	FieldDeclList : FieldDeclList FieldDecl .  (12)

	.  reduce 12


state 70
	GID : ID '(' . ParamList ')'  (69)
	ParamList : .  (82)

	ID  shift 90
	INT  shift 91
	STR  shift 92
	','  reduce 82
	')'  reduce 82

	ParamList  goto 93
	Param  goto 94
	ParamType  goto 95


state 71
	GID : ID '[' . NUM ']'  (68)

	NUM  shift 96
	.  error


state 72
	GPtrID : MUL ID .  (72)

	.  reduce 72


state 73
	TupleFieldType : INT .  (77)

	.  reduce 77


state 74
	TupleFieldType : STR .  (78)

	.  reduce 78


state 75
	TupleFieldDecl : TupleFieldType . TupleFieldName  (76)

	ID  shift 97
	.  error

	TupleFieldName  goto 98


state 76
	TupleFieldDeclList : TupleFieldDecl .  (75)

	.  reduce 75


state 77
	TupleDecl : '(' TupleFieldDeclList . ')'  (73)
	TupleFieldDeclList : TupleFieldDeclList . ',' TupleFieldDecl  (74)

	','  shift 99
	')'  shift 100
	.  error


state 78
	GID : GPtrID '(' . ParamList ')'  (71)
	ParamList : .  (82)

	ID  shift 90
	INT  shift 91
	STR  shift 92
	','  reduce 82
	')'  reduce 82

	ParamList  goto 101
	Param  goto 94
	ParamType  goto 95


state 79
	GDecl : GType TupleDecl GIDList . ';'  (60)
	GIDList : GIDList . ',' GID  (65)

	','  shift 80
	';'  shift 102
	.  error


state 80
	GIDList : GIDList ',' . GID  (65)

	ID  shift 44
	MUL  shift 45
	.  error

	GPtrID  goto 47
	GID  goto 103


state 81
	GDecl : GType GIDList ';' .  (59)

	.  reduce 59


state 82
	ClassMembers : DECL . FieldDeclList MethodDeclList ENDDECL  (22)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 40
	FieldDecl  goto 41
	FieldDeclList  goto 104


state 83
	ClassDef : ClassName '{' ClassMembers . MethodDefns '}'  (21)

	ID  shift 28
	INT  shift 105
	STR  shift 30
	.  error

	FDefBlock  goto 106
	MethodDefns  goto 107
	FDef  goto 33
	FuncSign  goto 34
	FuncType  goto 35


state 84
	start : TypeDefBlock ClassDefBlock GDeclBlock FDefBlock MainBlock .  (1)

	.  reduce 1


state 85
	LDeclBlock : DECL . LDeclList ENDDECL  (105)
	LDeclBlock : DECL . ENDDECL  (106)

	ID  shift 108
	TUPLE  shift 109
	ENDDECL  shift 110
	INT  shift 111
	STR  shift 112
	.  error

	LType  goto 113
	LDeclList  goto 114
	LDecl  goto 115


state 86
	FDef : FuncSign '{' LDeclBlock . FBody '}'  (96)

	BEGIN_  shift 116
	.  error

	FBody  goto 117


state 87
	FuncSign : FuncType FID '(' . ParamList ')'  (97)
	ParamList : .  (82)

	ID  shift 90
	INT  shift 91
	STR  shift 92
	','  reduce 82
	')'  reduce 82

	ParamList  goto 118
	Param  goto 94
	ParamType  goto 95


state 88
	MainBlock : MainFunc '(' ')' . '{' LDeclBlock MBody '}'  (121)

	'{'  shift 119
	.  error


state 89
	FieldDecl : TypeName ID ';' .  (14)

	.  reduce 14


state 90
	ParamType : ID .  (88)

	.  reduce 88


state 91
	ParamType : INT .  (84)
	ParamType : INT . MUL  (86)

	MUL  shift 120
	ID  reduce 84


state 92
	ParamType : STR .  (85)
	ParamType : STR . MUL  (87)

	MUL  shift 121
	ID  reduce 85


state 93
	GID : ID '(' ParamList . ')'  (69)
	ParamList : ParamList . ',' Param  (80)

	','  shift 122
	')'  shift 123
	.  error


state 94
	ParamList : Param .  (81)

	.  reduce 81


state 95
	Param : ParamType . ID  (83)

	ID  shift 124
	.  error


state 96
	GID : ID '[' NUM . ']'  (68)

	']'  shift 125
	.  error


state 97
	TupleFieldName : ID .  (79)

	.  reduce 79


state 98
	TupleFieldDecl : TupleFieldType TupleFieldName .  (76)

	.  reduce 76


state 99
	TupleFieldDeclList : TupleFieldDeclList ',' . TupleFieldDecl  (74)

	INT  shift 73
	STR  shift 74
	.  error

	TupleFieldType  goto 75
	TupleFieldDecl  goto 126


state 100
	TupleDecl : '(' TupleFieldDeclList ')' .  (73)

	.  reduce 73


state 101
	GID : GPtrID '(' ParamList . ')'  (71)
	ParamList : ParamList . ',' Param  (80)

	','  shift 122
	')'  shift 127
	.  error


state 102
	GDecl : GType TupleDecl GIDList ';' .  (60)

	.  reduce 60


state 103
	GIDList : GIDList ',' GID .  (65)

	.  reduce 65


state 104
	FieldDeclList : FieldDeclList . FieldDecl  (12)
	ClassMembers : DECL FieldDeclList . MethodDeclList ENDDECL  (22)

	ID  shift 37
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 128
	FieldDecl  goto 69
	MethodDeclList  goto 129
	MethodDecl  goto 130


state 105
	FuncType : INT .  (98)
	FuncType : INT . MUL  (100)

	MUL  shift 59
	ID  reduce 98


state 106
	MethodDefns : FDefBlock .  (27)
	FDefBlock : FDefBlock . FDef  (93)

	ID  shift 28
	INT  shift 105
	STR  shift 30
	'}'  reduce 27

	FDef  goto 62
	FuncSign  goto 34
	FuncType  goto 35


state 107
	ClassDef : ClassName '{' ClassMembers MethodDefns . '}'  (21)

	'}'  shift 131
	.  error


state 108
	LType : ID .  (114)

	.  reduce 114


state 109
	LType : TUPLE . ID  (115)

	ID  shift 132
	.  error


state 110
	LDeclBlock : DECL ENDDECL .  (106)

	.  reduce 106


state 111
	LType : INT .  (112)

	.  reduce 112


state 112
	LType : STR .  (113)

	.  reduce 113


state 113
	LDecl : LType . LIDList ';'  (110)
	LDecl : LType . TupleDecl LIDList ';'  (111)

	ID  shift 133
	MUL  shift 134
	'('  shift 46
	.  error

	TupleDecl  goto 135
	LIDList  goto 136
	LID  goto 137


state 114
	LDeclBlock : DECL LDeclList . ENDDECL  (105)
	LDeclList : LDeclList . LDecl  (108)

	ID  shift 108
	TUPLE  shift 109
	ENDDECL  shift 138
	INT  shift 111
	STR  shift 112
	.  error

	LType  goto 113
	LDecl  goto 139


state 115
	LDeclList : LDecl .  (109)

	.  reduce 109


state 116
	FBody : BEGIN_ . Slist retStmt END ';'  (103)
	FBody : BEGIN_ . retStmt END ';'  (104)

	ID  shift 140
	READ  shift 141
	WRITE  shift 142
	MUL  shift 143
	BREAKPOINT  shift 144
	IF  shift 145
	WHILE  shift 146
	DO  shift 147
	BREAK  shift 148
	CONTINUE  shift 149
	RETURN  shift 150
	SELF  shift 151
	.  error

	Slist  goto 152
	Stmt  goto 153
	inputStmt  goto 154
	outputStmt  goto 155
	assignStmt  goto 156
	ifStmt  goto 157
	whileStmt  goto 158
	doWhileStmt  goto 159
	breakStmt  goto 160
	continueStmt  goto 161
	breakPointStmt  goto 162
	retStmt  goto 163
	Field  goto 164
	InitializeStmt  goto 165
	AllocStmt  goto 166
	FreeStmt  goto 167
	DynaMemID  goto 168
	FieldID  goto 169
	NewStmt  goto 170
	DynamicMemStmt  goto 171


state 117
	FDef : FuncSign '{' LDeclBlock FBody . '}'  (96)

	'}'  shift 172
	.  error


state 118
	ParamList : ParamList . ',' Param  (80)
	FuncSign : FuncType FID '(' ParamList . ')'  (97)

	','  shift 122
	')'  shift 173
	.  error


state 119
	MainBlock : MainFunc '(' ')' '{' . LDeclBlock MBody '}'  (121)
	LDeclBlock : .  (107)

	DECL  shift 85
	BEGIN_  reduce 107

	LDeclBlock  goto 174


state 120
	ParamType : INT MUL .  (86)

	.  reduce 86


state 121
	ParamType : STR MUL .  (87)

	.  reduce 87


state 122
	ParamList : ParamList ',' . Param  (80)

	ID  shift 90
	INT  shift 91
	STR  shift 92
	.  error

	Param  goto 175
	ParamType  goto 95


state 123
	GID : ID '(' ParamList ')' .  (69)

	.  reduce 69


state 124
	Param : ParamType ID .  (83)

	.  reduce 83


state 125
	GID : ID '[' NUM ']' .  (68)

	.  reduce 68


state 126
	TupleFieldDeclList : TupleFieldDeclList ',' TupleFieldDecl .  (74)

	.  reduce 74


state 127
	GID : GPtrID '(' ParamList ')' .  (71)

	.  reduce 71


state 128
	FieldDecl : TypeName . ID ';'  (14)
	MethodDecl : TypeName . ID '(' ParamList ')' ';'  (26)

	ID  shift 176
	.  error


state 129
	ClassMembers : DECL FieldDeclList MethodDeclList . ENDDECL  (22)
	MethodDeclList : MethodDeclList . MethodDecl  (24)

	ID  shift 37
	ENDDECL  shift 177
	INT  shift 38
	STR  shift 39
	.  error

	TypeName  goto 178
	MethodDecl  goto 179


state 130
	MethodDeclList : MethodDecl .  (25)

	.  reduce 25


state 131
	ClassDef : ClassName '{' ClassMembers MethodDefns '}' .  (21)

	.  reduce 21


state 132
	LType : TUPLE ID .  (115)

	.  reduce 115


state 133
	LID : ID .  (118)
	LID : ID . '[' NUM ']'  (119)

	'['  shift 180
	','  reduce 118
	';'  reduce 118


state 134
	LID : MUL . ID  (120)

	ID  shift 181
	.  error


state 135
	LDecl : LType TupleDecl . LIDList ';'  (111)

	ID  shift 133
	MUL  shift 134
	.  error

	LIDList  goto 182
	LID  goto 137


state 136
	LDecl : LType LIDList . ';'  (110)
	LIDList : LIDList . ',' LID  (116)

	','  shift 183
	';'  shift 184
	.  error


state 137
	LIDList : LID .  (117)

	.  reduce 117


state 138
	LDeclBlock : DECL LDeclList ENDDECL .  (105)

	.  reduce 105


state 139
	LDeclList : LDeclList LDecl .  (108)

	.  reduce 108


state 140
	assignStmt : ID . '=' expr  (42)
	assignStmt : ID . '[' expr ']' '=' expr  (43)
	DynaMemID : ID . '='  (132)
	DynaMemID : ID . '[' expr ']' '='  (133)
	FieldID : ID .  (138)
	FieldID : ID . '[' expr ']'  (139)

	'='  shift 185
	'['  shift 186
	'.'  reduce 138


state 141
	inputStmt : READ . expr  (40)

	ID  shift 187
	NUM  shift 188
	STRING  shift 189
	NULL_  shift 190
	MUL  shift 191
	AMPERSAND  shift 192
	NOT  shift 193
	SELF  shift 151
	'('  shift 194
	.  error

	expr  goto 195
	Field  goto 196
	FieldID  goto 169
	FieldFunction  goto 197


state 142
	outputStmt : WRITE . expr  (41)

	ID  shift 187
	NUM  shift 188
	STRING  shift 189
	NULL_  shift 190
	MUL  shift 191
	AMPERSAND  shift 192
	NOT  shift 193
	SELF  shift 151
	'('  shift 194
	.  error

	expr  goto 198
	Field  goto 196
	FieldID  goto 169
	FieldFunction  goto 197


state 143
	assignStmt : MUL . ID '=' expr  (44)

	ID  shift 199
	.  error


state 144
	breakPointStmt : BREAKPOINT .  (54)

	.  reduce 54


state 145
	ifStmt : IF . expr THEN Slist ELSE Slist ENDIF  (48)
	ifStmt : IF . expr THEN Slist ENDIF  (49)

	ID  shift 187
	NUM  shift 188
	STRING  shift 189
	NULL_  shift 190
	MUL  shift 191
	AMPERSAND  shift 192
	NOT  shift 193
	SELF  shift 151
	'('  shift 194
	.  error

	expr  goto 200
	Field  goto 196
	FieldID  goto 169
	FieldFunction  goto 197


state 146
	whileStmt : WHILE . expr DO Slist ENDWHILE  (50)

	ID  shift 187
	NUM  shift 188
	STRING  shift 189
	NULL_  shift 190
	MUL  shift 191
	AMPERSAND  shift 192
	NOT  shift 193
	SELF  shift 151
	'('  shift 194
	.  error

	expr  goto 201
	Field  goto 196
	FieldID  goto 169
	FieldFunction  goto 197


state 147
	doWhileStmt : DO . Slist WHILE expr ENDWHILE  (51)

	ID  shift 140
	READ  shift 141
	WRITE  shift 142
	MUL  shift 143
	BREAKPOINT  shift 144
	IF  shift 145
	WHILE  shift 146
	DO  shift 147
	BREAK  shift 148
	CONTINUE  shift 149
	SELF  shift 151
	.  error

	Slist  goto 202
	Stmt  goto 153
	inputStmt  goto 154
	outputStmt  goto 155
	assignStmt  goto 156
	ifStmt  goto 157
	whileStmt  goto 158
	doWhileStmt  goto 159
	breakStmt  goto 160
	continueStmt  goto 161
	breakPointStmt  goto 162
	Field  goto 164
	InitializeStmt  goto 165
	AllocStmt  goto 166
	FreeStmt  goto 167
	DynaMemID  goto 168
	FieldID  goto 169
	NewStmt  goto 170
	DynamicMemStmt  goto 171


state 148
	breakStmt : BREAK .  (52)

	.  reduce 52


state 149
	continueStmt : CONTINUE .  (53)

	.  reduce 53


state 150
	retStmt : RETURN . retVal ';'  (47)

	ID  shift 187
	NUM  shift 188
	STRING  shift 189
	NULL_  shift 190
	MUL  shift 191
	AMPERSAND  shift 192
	NOT  shift 193
	SELF  shift 151
	'('  shift 194
	.  error

	expr  goto 203
	retVal  goto 204
	Field  goto 196
	FieldID  goto 169
	FieldFunction  goto 197


state 151
	Field : SELF . '.' ID  (137)

	'.'  shift 205
	.  error


state 152
	Slist : Slist . Stmt ';'  (28)
	FBody : BEGIN_ Slist . retStmt END ';'  (103)

	ID  shift 140
	READ  shift 141
	WRITE  shift 142
	MUL  shift 143
	BREAKPOINT  shift 144
	IF  shift 145
	WHILE  shift 146
	DO  shift 147
	BREAK  shift 148
	CONTINUE  shift 149
	RETURN  shift 150
	SELF  shift 151
	.  error

	Stmt  goto 206
	inputStmt  goto 154
	outputStmt  goto 155
	assignStmt  goto 156
	ifStmt  goto 157
	whileStmt  goto 158
	doWhileStmt  goto 159
	breakStmt  goto 160
	continueStmt  goto 161
	breakPointStmt  goto 162
	retStmt  goto 207
	Field  goto 164
	InitializeStmt  goto 165
	AllocStmt  goto 166
	FreeStmt  goto 167
	DynaMemID  goto 168
	FieldID  goto 169
	NewStmt  goto 170
	DynamicMemStmt  goto 171


state 153
	Slist : Stmt . ';'  (29)

	';'  shift 208
	.  error


state 154
	Stmt : inputStmt .  (30)

	.  reduce 30


state 155
	Stmt : outputStmt .  (31)

	.  reduce 31


state 156
	Stmt : assignStmt .  (32)

	.  reduce 32


state 157
	Stmt : ifStmt .  (33)

	.  reduce 33


state 158
	Stmt : whileStmt .  (34)

	.  reduce 34


state 159
	Stmt : doWhileStmt .  (35)

	.  reduce 35


state 160
	Stmt : breakStmt .  (36)

	.  reduce 36


state 161
	Stmt : continueStmt .  (37)

	.  reduce 37


state 162
	Stmt : breakPointStmt .  (38)

	.  reduce 38


state 163
	FBody : BEGIN_ retStmt . END ';'  (104)

	END  shift 209
	.  error


state 164
	assignStmt : Field . '=' expr  (45)
	Field : Field . '.' ID  (135)

	'='  shift 210
	'.'  shift 211
	.  error


state 165
	DynamicMemStmt : InitializeStmt .  (126)

	.  reduce 126


state 166
	DynamicMemStmt : AllocStmt .  (124)

	.  reduce 124


state 167
	DynamicMemStmt : FreeStmt .  (125)

	.  reduce 125


state 168
	AllocStmt : DynaMemID . ALLOC '(' ')'  (128)
	FreeStmt : DynaMemID . FREE '(' expr ')'  (129)
	InitializeStmt : DynaMemID . INITIALIZE '(' ')'  (130)
	NewStmt : DynaMemID . NEW '(' expr ')'  (131)

	INITIALIZE  shift 212
	ALLOC  shift 213
	FREE  shift 214
	NEW  shift 215
	.  error


state 169
	Field : FieldID . '.' ID  (136)

	'.'  shift 216
	.  error


state 170
	DynamicMemStmt : NewStmt .  (127)

	.  reduce 127

